--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>MiniProject1xb</title>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <link rel="stylesheet" href="/CSS/boots.css" type="text/css">
+    <link rel="stylesheet" href="./CSS/boots.css" type="text/css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;900&family=Ubuntu:ital,wght@0,300;0,500;0,700;1,300&display=swap" rel="stylesheet">
@@ -19,7 +19,7 @@
   navbar-expand-lg navbar-dark text-center bg-black">
     <div class="container-fluid">
       <a href="#" class="navbar-brand mb-0 h1">
-        <img class="d-inline-block align-top" src="./Images/image here.jpg" width="40" height="40"> xtianbora
+        <img class="d-inline-block align-top" src="../Images/image here.jpg" width="40" height="40"> xtianbora
       </a>
       <button
         type="button"
@@ -100,7 +100,7 @@
   <div class="container-fluid" id="intro">
     <div class="landing-text">
       <div class="row d-flex justify-content-center mt-4 pt-5">
-        <img src="/Images/intro.jpg">
+        <img src="../Images/intro.jpg">
       </div>
 <!-- i am webdev/expertise -->
       <div class="row">
@@ -121,10 +121,10 @@
 <!-- home -->
   <main id="home">
     <div class="padding">
-    <div class="container p-3 bg-white bg-opacity-10 border border-black border-start-0 rounded-5 shadow-lg">
+    <div class="container p-3 bg-white bg-opacity-10 border border-black border-start-0 rounded-5 shadow-lg text-light">
       <div class="row align-items-center">
         <div class="col">
-          <img src="/Images/myself.png" class="img-fluid" id="firstimg">
+          <img src="../Images/myself.png" class="img-fluid" id="firstimg">
         </div>
         <div class="col" id="first">
           <h5 class="text-center">Hi I'm</h5>
@@ -148,7 +148,7 @@
       <div class="col">
         <a href="https://ilovemilktea.ph/" target="https://ilovemilktea.ph/" class="text-light text-decoration-none">
           <div class="card h-100 bg-dark border-secondary">
-            <img src="/GIFs/barista.gif" class="card-img-top" alt="click here">
+            <img src="../GIFs/barista.gif" class="card-img-top" alt="click here">
             <div class="card-body text-light">
               <h3 class="card-title text-center">Barista</h3>
               <p class="card-text">
@@ -164,7 +164,7 @@
       <div class="col">
         <a href="https://www.kimbel.biz/index.php/c_kimbel" target="https://www.kimbel.biz/index.php/c_kimbel" class="text-light text-decoration-none">
           <div class="card h-100 bg-dark border-secondary">
-            <img src="/GIFs/encoder.gif" class="card-img-top" alt="...">
+            <img src="../GIFs/encoder.gif" class="card-img-top" alt="...">
             <div class="card-body text-light">
               <h3 class="card-title text-center">Data Encoder</h3>
               <p class="card-text">
@@ -179,7 +179,7 @@
       <div class="col">
         <a href="https://www.facebook.com/twentyeightprints" target="https://www.facebook.com/twentyeightprints" class="text-light text-decoration-none">
           <div class="card h-100 bg-dark border-secondary">
-            <img src="/GIFs/printing.gif" class="card-img-top" alt="...">
+            <img src="../GIFs/printing.gif" class="card-img-top" alt="...">
             <div class="card-body text-light">
               <h3 class="card-title text-center">Printing Business</h3>
               <p class="card-text">
@@ -194,7 +194,7 @@
       <div class="col">
         <a href="https://kodego.ph/" target="https://kodego.ph/" class="text-light text-decoration-none">
           <div class="card h-100 bg-dark border-secondary">
-              <img src="/GIFs/webdev.gif" class="card-img-top" alt="...">
+              <img src="../GIFs/webdev.gif" class="card-img-top" alt="...">
                 <div class="card-body text-light">
                   <h3 class="card-title text-center">Web Developer</h3>
                   <p class="card-text">
@@ -216,10 +216,10 @@
   <div class="container">
     <div class="row">
       <div class="col-6 mt-2">
-        <img src="/Images/grad pic hat1.jpg" class="img-thumbnail rounded-5" id="imgthmb">
+        <img src="../Images/grad pic hat1.jpg" class="img-thumbnail rounded-5" id="imgthmb">
       </div>
-      <div class="col-2"></div>
-      <div class="col" id="rightcol">
+      <div class="col-2 shadow-lg"></div>
+      <div class="col">
         <div class="row mb-3">
           <p>Full Name</p>
           <h3>Christian P. Borromeo</h3>
@@ -246,7 +246,7 @@
         </div>
       </div>
     <div class="row mt-lg-5">
-      <a href="/PDFs/CPB.pdf" download class="btn btn-outline-light">CV Download
+      <a href="../PDFs/CPB.pdf" download class="btn btn-outline-light">CV Download
         <i class="fa-solid fa-file-arrow-down fa-bounce" style="color: #dbdbdc;">
         </i>
       </a>
@@ -261,14 +261,14 @@
 <div class="container p-5 bg-white bg-opacity-10 border border-black rounded-5 shadow-lg">
   <div class="row text-light">
     <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-      <img src="/GIFs/designer.gif" class="img-thumbnail">
+      <img src="../GIFs/designer.gif" class="img-thumbnail">
     </div>
     <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
       <h4>The First</h4>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates earum a pariatur sit necessitatibus cupiditate, dolores ipsum sapiente perferendis aliquid temporibus est enim suscipit? Labore, beatae aliquam? Totam, aut deserunt!</p>
     </div>
     <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-      <img src="/GIFs/drummer.gif" class="img-thumbnail">
+      <img src="../GIFs/drummer.gif" class="img-thumbnail">
     </div>
     <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
       <h4>The Second</h4>
@@ -284,20 +284,20 @@
   <div class="container">
     <div class="row">
       <div class="col row-cols-1">
-        <video src="/Videos/Manayakis - Herbz and Spicez Band (Live).mp4"
-        controls poster="/Images/poster.jpg">
+        <video src="../Videos/Manayakis - Herbz and Spicez Band (Live).mp4"
+        controls poster="../Images/poster.jpg">
         </video>
           <p class="text-center"> "Manyakis" <i>by Herbz and Spicez Band</i></p>
       </div>
       <div class="col row-cols-1">
-        <video src="/Videos/Yokabats - Herbz and Spicez Band (Live).mp4"
-        controls loop poster="/Images/poster.jpg">
+        <video src="../Videos/Yokabats - Herbz and Spicez Band (Live).mp4"
+        controls loop poster="../Images/poster.jpg">
         </video>
           <p class="text-center"> "Yokabats" <i>by Herbz and Spicez Band</i></p>
       </div>
       <div class="col row-cols-1">
-        <video src="/Videos/Ganyan Talaga - Herbz and Spicez Band (Recording).mp4"
-        controls loop poster="/Images/poster.jpg">
+        <video src="../Videos/Ganyan Talaga - Herbz and Spicez Band (Recording).mp4"
+        controls loop poster="../Images/poster.jpg">
         </video>
           <p class="text-center"> "Ganyan Talaga" <i>by Herbz and Spicez Band</i></p>
       </div>
