--- a/index.html
+++ b/index.html
@@ -260,14 +260,14 @@
       <img src="../GIFs/designer.gif" class="img-thumbnail">
     </div>
     <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-      <h4>The First</h4>
+      <h4>Graphic/Layout Artist</h4>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates earum a pariatur sit necessitatibus cupiditate, dolores ipsum sapiente perferendis aliquid temporibus est enim suscipit? Labore, beatae aliquam? Totam, aut deserunt!</p>
     </div>
     <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
       <img src="../GIFs/drummer.gif" class="img-thumbnail">
     </div>
     <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-      <h4>The Second</h4>
+      <h4>Passion for Dumming</h4>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo ullam inventore delectus est molestias qui praesentium asperiores porro dolorum nobis. Iste corrupti recusandae provident necessitatibus perspiciatis atque temporibus eligendi ex?</p>
     </div>
   </div>
@@ -307,8 +307,22 @@
 <div class="bg-dark pt-4">
 <footer class="container">
   <div class="row text-white-50">
-    <div class="col-sm-4">
-      <h5 class="mb-4 text-info">CONTACTS</h5>
+
+
+    <div class="col-sm-4 text-center">
+      <h5 class="text-info">CONNECT</h5>
+      <a href="https://www.facebook.com/xtianbora" target="_blank" class="fa-brands fa-facebook"></a>
+      <a href="https://twitter.com/xtianbora" target="_blank" class="fa-brands fa-twitter"></a>
+      <a href="https://www.instagram.com/xtianbora/" target="_blank" class="fa-brands fa-instagram"></a>
+      <a href="https://www.linkedin.com/in/xtianbora/" target="_blank" class="fa-brands fa-linkedin"></a>
+      <a href="https://www.youtube.com/xtianbora" target="_blank" class="fa-brands fa-youtube"></a>
+      <a href="https://www.tiktok.com/@xtianbora" target="_blank" class="fa-brands fa-tiktok"></a>
+      <br>
+      <h4 class="mb-5">Follow me on Social Media!</h4>
+    </div>
+
+    <div class="col-sm-4  text-center">
+      <h5 class="mb-3 text-info">CONTACTS</h5>
       <p>
         <i class="fas fa-home mr-5"></i>
         279 Camarin Rd., Caloocan City, PH
@@ -323,22 +337,10 @@
       </p>
     </div>
 
-    <div class="col-sm-4 text-center">
-      <h5 class="text-info">CONNECT</h5>
-      <a href="https://www.facebook.com/xtianbora" target="_blank" class="fa-brands fa-facebook"></a>
-      <a href="https://twitter.com/xtianbora" target="_blank" class="fa-brands fa-twitter"></a>
-      <a href="https://www.instagram.com/xtianbora/" target="_blank" class="fa-brands fa-instagram"></a>
-      <a href="https://www.linkedin.com/in/xtianbora/" target="_blank" class="fa-brands fa-linkedin"></a>
-      <a href="https://www.youtube.com/xtianbora" target="_blank" class="fa-brands fa-youtube"></a>
-      <a href="https://www.tiktok.com/@xtianbora" target="_blank" class="fa-brands fa-tiktok"></a>
-      <br>
-      <h4>Follow me on Social Media!</h4>
+    <div class="col-sm-4 d-flex justify-content-center">
+      <img src="../Images/homer rock on.png" height="150" width="150">
     </div>
   </div>
-
-    <!-- <div class="col-sm-4">
-      <img src="/image here.jpg" class="icon">
-    </div> -->
 
 </footer>
 </div>
